--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.6
 django-bootstrap-v5==1.0.5
 gunicorn==20.1.0
 Pillow==8.3.1
+python-dotenv==0.19.0
 pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
